fixed recommendations not showing on focus charts

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
   flex-wrap: wrap;
 }
 
-.graphWindow {
+.graphWindow, .processFlow {
   -webkit-box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
   box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
 
@@ -91,7 +91,7 @@
   padding: 20px;
 }
 
-.graphWindow p {
+.graphWindow p, .processFlow p {
   width: 500px;
 }
 
